# robot_visual

./: .gitignore  CMakeLists.txt  README.md  agvcontroller.cpp  agvcontroller.h  camera_stream.py  camerawindow.cpp  camerawindow.h  deviceindicator.cpp  deviceindicator.h  devicemanager.cpp  devicemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  robotcontroller.cpp  themeswitch.cpp  visionclient.cpp  visionclient.h  workflowengine.cpp  workflowengine.h  workflowstep.h  workflowwidget.cpp  workflowwidget.h
3rd/HuaYansdk/HuayanRobotLibrary-C++-V1.0.15.0/MSVC/: HR_Pro.lib  HR_Prod.lib
3rd/HuaYansdk/HuayanRobotLibrary-C++-V1.0.15.0/include/: HR_Pro.h
3rd/NScanHubSdk/N-ScanHubForLinux_v1.0.05/demo/: Makefile.verify  N-ScanHubDemo.cpp  NScanNetworkVerify  NScanNetworkVerify.cpp  verify_network.sh
3rd/NScanHubSdk/N-ScanHubForLinux_v1.0.05/demo/x32/: N-ScanHubDemo
3rd/NScanHubSdk/N-ScanHubForLinux_v1.0.05/demo/x64/: N-ScanHubDemo
3rd/NScanHubSdk/N-ScanHubForLinux_v1.0.05/include/: N-ScanHub.h
3rd/NScanHubSdk/N-ScanHubForWindows_v1.0.05/N-ScanHubForWindows/: N-ScanHubForWindows v1.0.05测试报告.docx  N-ScanHubForWindows v1.0.05软件发布申请.docx  N-ScanHub_CN.docx  N-ScanHub_EN.docx  软件发布BUG评审确认表(N-ScanHub v1.0.05).docx
3rd/NScanHubSdk/N-ScanHubForWindows_v1.0.05/N-ScanHubForWindows/demo/: N-ScanHubDemo.cpp
3rd/NScanHubSdk/N-ScanHubForWindows_v1.0.05/N-ScanHubForWindows/include/: N-ScanHub.h
3rd/NScanHubSdk/N-ScanHubForWindows_v1.0.05/N-ScanHubForWindows/lib/x64/: N-ScanHub.lib
3rd/NScanHubSdk/N-ScanHubForWindows_v1.0.05/N-ScanHubForWindows/lib/x86/: N-ScanHub.lib
changelog/: CHANGELOG.md
docs/superpowers/plans/: 2026-06-11-ui-sdk-cleanup-agv-panel.md  2026-06-12-line-flow-pilot.md  2026-06-13-nscan-network-scanner.md  2026-06-16-custom-system-communication.md  2026-06-22-empty-box-pallet-plan.md  2026-06-25-12-station-continuous-replenishment.md  2026-07-01-main-window-ui-layout-theme.md  2026-07-01-same-lm-unload-log-dedup.md
docs/superpowers/specs/: 2026-06-08-vision-guided-pickup-design.md  2026-06-11-ui-sdk-cleanup-agv-panel-design.md  2026-06-12-line-flow-pilot-design.md  2026-06-16-m4-fleet-integration-design.md  2026-06-25-12-station-continuous-replenishment-design.md
scripts/: agv_modbus_debug.py  camera_test.py  mock_agv_server.py  test_rz_confirm_and_scan_search.py  test_same_lm_guard.py  test_same_lm_unload_and_log_dedup.py  test_shortage_source_ui.py  test_unload_function_name.py  test_version_metadata.py
src/: agvcontroller.cpp  agvcontroller.h  camerawindow.h  customSysScheduler.cpp  customSysScheduler.h  deviceindicator.h  devicemanager.cpp  devicemanager.h  handeyedialog.cpp  handeyedialog.h  huayanScheduler.cpp  huayanScheduler.h  lineconfig.h  linemanager.cpp  linemanager.h  lineorchestrator.cpp  lineorchestrator.h  mainwindow.cpp  mainwindow.h  nscanscheduler.cpp  nscanscheduler.h  palletparamdialog.cpp  palletparamdialog.h  palletscheduler.cpp  palletscheduler.h  robotcontroller.cpp  robotcontroller.h  shortagecalculator.cpp  shortagecalculator.h  shortageconfig.h  shortagemonitor.cpp  shortagemonitor.h  taskexecutor.cpp  taskexecutor.h  taskqueue.h  themeswitch.cpp  themeswitch.h  visionclient.cpp  visionclient.h  workflowengine.cpp  (+4 more)
tests/: test_customsysscheduler.cpp  test_shortage_line_integration.py  test_shortagecalculator.cpp  test_shortagemonitor.cpp
tools/: fill_light  setup_permissions.sh
